syntax = "proto3";

package shared.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "sphere/errors/errors.proto";

service TestService {
  rpc RunTest(RunTestRequest) returns (RunTestResponse) {
    option (google.api.http) = {
      post: "/api/test/{path_test1}/second/{path_test2}"
      body: "*"
    };
  }
}

message RunTestRequest {
  string field_test1 = 1;
  int64 field_test2 = 2;
  string path_test1 = 3; // @sphere:uri
  int64 path_test2 = 4; // @sphere:uri="path_test2"
  string query_test1 = 5 [(buf.validate.field).required = true]; // @sphere:form
  int64 query_test2 = 6; // @sphere:form="query_test2"
}

message RunTestResponse {
  string field_test1 = 1;
  int64 field_test2 = 2;
  string path_test1 = 3;
  int64 path_test2 = 4;
  string query_test1 = 5;
  int64 query_test2 = 6;
}

enum TestError {
  option (sphere.errors.default_status) = 500;
  UNKNOWN_TEST_ERROR = 0;
  INVALID_FIELD_TEST1 = 1000 [(sphere.errors.options) = {
    status: 400
    reason: "INVALID_ARGUMENT"
    message: "无效的 field_test1"
  }];
  INVALID_PATH_TEST2 = 1001 [(sphere.errors.options) = {status: 400}];
}
